--- a/03_Design_Library/03_Observational_Causal/03_Difference_in_Differences.Rmd
+++ b/03_Design_Library/03_Observational_Causal/03_Difference_in_Differences.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Difference in differences"
+title: "Difference-in-differences"
 output: html_document
 bibliography: ../../bib/book.bib 
 ---
@@ -17,39 +17,18 @@ source("scripts/before_chapter_script.R")
 
 <!-- start post here, do not edit above -->
 
-## Difference in differences
-
-<!-- make sure to rename the section title below -->
+## Difference-in-differences
 
 ```{r difference_in_difference, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
-sims <- 100
-b_sims <- 20
+sims <- 1000
+b_sims <- 1000
 ```
 
 ```{r, echo = FALSE}
 # load packages for this section here. note many (DD, tidyverse) are already available, see scripts/package-list.R
 ```
-
-
-```{r}
-
-```
-
-```{r, eval = do_diagnosis & !exists("do_bookdown")}
-# simulations_pilot <- simulate_design(design, sims = sims)
-```
-
-```{r, echo = FALSE, purl = FALSE}
-# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
-rds_file_path <- paste0(get_dropbox_path("section_template"), "/simulations_pilot.RDS")
-if (do_diagnosis & !exists("do_bookdown")) {
-  write_rds(simulations_pilot, path = rds_file_path)
-}
-simulations_pilot <- read_rds(rds_file_path)
-```
-
 
 ### Two-period two-group setting
 
@@ -89,10 +68,25 @@ two_period_design <-
   
   declare_estimator(estimate = mean(Y[Z == 1 & time == 1]) - mean(Y[Z == 0 & time == 1]), 
                     estimator_label = "DiM", handler = summarize, label = "DiM")
-  
-# diagnosis <- diagnose_design(
-#   two_period_design, diagnosands = declare_diagnosands(select = bias), 
-#   sims = 1000, bootstrap_sims = 1000)
+```
+
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+diagnosis_two_period <- diagnose_design(
+  two_period_design, diagnosands = declare_diagnosands(select = bias),
+  sims = sims, bootstrap_sims = b_sims)
+```
+
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("difference_in_differences"), "/diagnosis_two_period.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(diagnosis_two_period, path = rds_file_path)
+}
+diagnosis_two_period <- read_rds(rds_file_path)
+```
+
+```{r}
+kable(get_diagnosands(diagnosis_two_period))
 ```
 
 ### Parallel trends assumption
@@ -143,7 +137,23 @@ multi_period_design <-
   declare_estimator(Y ~ Z + time, fixed_effects = ~ units + periods, 
                     model = lm_robust, label = "twoway-fe", estimand = "ATE") 
   
-# diagnose_design(multi_period_design, diagnosands = declare_diagnosands(select = bias), sims = 500, bootstrap_sims = 1000)
+```
+
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+diagnosis_multi_period <- diagnose_design(multi_period_design, diagnosands = declare_diagnosands(select = bias), sims = sims, bootstrap_sims = b_sims)
+```
+
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("difference_in_differences"), "/diagnosis_multi_period.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(diagnosis_multi_period, path = rds_file_path)
+}
+diagnosis_multi_period <- read_rds(rds_file_path)
+```
+
+```{r}
+kable(get_diagnosands(diagnosis_multi_period))
 ```
 
 - Show that in case where some units switch back and forth between T and C during panel there is bias (point to Imai and Kim appear with weighted FE estimator to fix this)
