Simplify encouragement PO
Someone posted this on the forum, I think this way is easier to understand.

--- a/03_Design_Library/04_Experimental_Causal/04_Encouragement_Designs.Rmd
+++ b/03_Design_Library/04_Experimental_Causal/04_Encouragement_Designs.Rmd
@@ -48,10 +48,10 @@ design <-
   ) +
   declare_potential_outcomes(
     D ~ case_when(
-      Z == 0 & type %in% c("Never-Taker", "Complier") ~ 0,
-      Z == 1 & type %in% c("Never-Taker", "Defier") ~ 0,
-      Z == 0 & type %in% c("Always-Taker", "Defier") ~ 1,
-      Z == 1 & type %in% c("Always-Taker", "Complier") ~ 1
+      type %in% "Never-Taker" ~ 0,
+      type %in% "Defier" ~ 1 - Z,
+      type %in% "Always-Taker" ~ 1,
+      type %in% "Complier" ~ Z
     )
   ) +
   declare_potential_outcomes(
